tester/src/test/aya/failure/scope/re-prim.aya.txt
In file $FILE:2:5 ->

  1 | prim I
  2 | prim I
           ^^
  
Error: Redefinition of primitive `I`
Parsing interrupted due to errors.
What are you doing?
